fixed issue of small gap between the images used to create top line of all pages shown after terms and condition page.

--- a/simplicity/UNCHS/Common/StyleSheets/newstylesheet.css
+++ b/simplicity/UNCHS/Common/StyleSheets/newstylesheet.css
@@ -436,7 +436,7 @@ border: none;
 {
     float:left;
     height:20px;
-    width: 96.15%;    
+    width: 96.12%;    
 }
 .topRight
 {
